--- a/brain_blocks/brain_blocks.csproj
+++ b/brain_blocks/brain_blocks.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Assets\Scripts\FamiliarizationController.cs" />
     <Compile Include="Assets\Scripts\FamiliarizationSet.cs" />
     <Compile Include="Assets\Scripts\Grid.cs" />
+    <Compile Include="Assets\Scripts\MainController.cs" />
+    <Compile Include="Assets\Scripts\MasterController.cs" />
     <Compile Include="Assets\Scripts\Set.cs" />
     <Compile Include="Assets\Scripts\Spawn.cs" />
   </ItemGroup>
