--- a/brain_blocks/brain_blocks.csproj
+++ b/brain_blocks/brain_blocks.csproj
@@ -128,10 +128,10 @@
     <Compile Include="Assets\Scripts\FamiliarizationSet.cs" />
     <Compile Include="Assets\Scripts\Grid.cs" />
     <Compile Include="Assets\Scripts\LoggerCSV.cs" />
-    <Compile Include="Assets\Scripts\MainUIController.cs" />
+    <Compile Include="Assets\Scripts\MainController.cs" />
+    <Compile Include="Assets\Scripts\MainSet.cs" />
+    <Compile Include="Assets\Scripts\MainSpawn.cs" />
     <Compile Include="Assets\Scripts\MenuController.cs" />
-    <Compile Include="Assets\Scripts\Set.cs" />
-    <Compile Include="Assets\Scripts\Spawn.cs" />
     <Compile Include="Assets\Scripts\TrainingController.cs" />
     <Compile Include="Assets\Scripts\TrainingCube.cs" />
     <Compile Include="Assets\Scripts\TrainingUI.cs" />
